uh, stop randomly truncating my push settings\!\!

--- a/syweb/webclient/app/app.css
+++ b/syweb/webclient/app/app.css
@@ -1014,7 +1014,6 @@ input.error {
 
 .pushsection {
     transition: max-height linear 0.5s, opacity linear 0.5s;
-    max-height: 1500px;
     overflow: hidden;
 }
 
